# royaumes-rust

./: .env.build  .env.exemple  .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  docker-compose.yaml  makefile  rustfmt.toml  sqlx-data.json
.github/workflows/: rust.yml
account/: README.md
account/api/: Cargo.toml
account/api/src/: lib.rs
account/client/: Cargo.toml  Trunk.toml  index.html
account/client-component/: Cargo.toml  Trunk.toml  index.html
account/client-component/src/: lib.rs
account/client/src/: lib.rs  login.rs  main.rs  register.rs
account/client/src/header/: login.rs  mod.rs  register.rs
account/model/: Cargo.toml
account/model/src/: error.rs  event.rs  lib.rs  model.rs  state.rs
account/model/tests/: account-model.rs
account/model/tests/book/: model.feature
account/server/: Cargo.toml  build.rs
account/server/migrations/: 20220805213015_init.sql
account/server/src/: main.rs
account/server/src/auth/: command.rs  event.rs  jwt_guard.rs  mod.rs  model.rs  query.rs
account/shared/: Cargo.toml
account/shared/src/: lib.rs
account/state/: Cargo.toml
account/state/src/: event.rs  lib.rs  state.rs
account/state/tests/: account-state.rs
account/state/tests/book/: model.feature
bank/: README.md
bank/client/: Cargo.toml
bank/client/src/: lib.rs  resume.rs
bank/server/: Cargo.toml  build.rs
bank/server/src/: main.rs
bank/shared/: Cargo.toml
bank/shared/src/: flow_create.rs  flow_production_change.rs  lib.rs
bank/state/: Cargo.toml
bank/state/src/: error.rs  event.rs  lib.rs  state.rs
bank/state/tests/: bank-state.rs
bank/state/tests/book/: model.feature
client/account-cl/: Cargo.toml
client/game/: Cargo.toml  Trunk.toml  index.html
client/game/src/: main.rs
client/web-home/: Cargo.toml  index.html
client/web-home/src/: main.rs  register.rs
client/web-home/src/header/: login.rs  register.rs
game/: README.md
game/api/: Cargo.toml
game/client/: Cargo.toml
game/client/src/: lib.rs  start.rs
game/model/: Cargo.toml
game/server/: Cargo.toml
hero/api/: Cargo.toml
hero/client/: Cargo.toml
hero/client/src/: lib.rs  start.rs
hero/model/: Cargo.toml
hero/server/: Cargo.toml
hero/server/src/: main.rs
lib/auth/: Cargo.toml
lib/auth/src/: lib.rs
lib/event-model/: Cargo.toml
lib/event-model/src/: lib.rs
lib/event-model/tests/: integration_test.rs
lib/event-model/tests/definition/: mod.rs
lib/event-model/tests/simple/: mod.rs
lib/event-repository/: Cargo.toml
lib/event-repository/src/: lib.rs
lib/event-repository/tests/: integration_test.rs
lib/event-repository/tests/concurrent/: mod.rs
lib/global-config/: Cargo.toml
lib/global-config/src/: lib.rs
lib/state/: Cargo.toml
lib/state-repository/: Cargo.toml
lib/state-repository/src/: lib.rs  metadata.rs
lib/state-repository/src/cross_state/: mod.rs
lib/state-repository/src/waiter/: mod.rs
lib/state-repository/tests/: cross_state_test.rs  integration_test.rs  state_only_test.rs  wait_test.rs
lib/state-repository/tests/concurrent/: mod.rs
lib/state-repository/tests/cross_state/: build.rs  build_api.rs  flow.rs  gold.rs  mod.rs
lib/state-repository/tests/simple/: mod.rs
lib/state-repository/tests/wait/: mod.rs
lib/state/src/: lib.rs
lib/waiter/: Cargo.toml
lib/waiter/src/: lib.rs
lib/waiter/tests/: integration_test.rs  multiple_test.rs  simple_test.rs
lib/waiter/tests/multiple/: build.rs  gold.rs  mod.rs  worker.rs
lib/waiter/tests/single/: mod.rs
lib/waiter/tests/state/: mod.rs
lib/workflow/: Cargo.toml
lib/workflow/src/: lib.rs
lib/workflow/tests/: multiple_test.rs
lib/workflow/tests/multiple/: build.rs  flow.rs  gold.rs  mod.rs  worker.rs
planet/: README.md
planet/api/: Cargo.toml
planet/client/: Cargo.toml
planet/client/src/: lib.rs  start.rs
planet/model/: Cargo.toml
planet/server/: Cargo.toml
planet/server/src/: main.rs
private/: Cargo.toml  README.md  Trunk-alpha.toml  Trunk-beta.toml  Trunk.toml  index.html
private/src/: main.rs  web_comp.rs
public/: Cargo.toml  README.md  Trunk.toml  index.html
public/src/: main.rs  web_comp.rs
public/src/header/: login.rs  mod.rs  register.rs
server/: README.md
server/account/: Cargo.toml
server/account-sv/: Cargo.toml
server/account/migrations/: 20220805213015_init.sql
server/account/src/: main.rs
server/account/src/auth/: command.rs  error.rs  event.rs  jwt_guard.rs  mod.rs  model.rs  query.rs
server/client/: Cargo.toml
server/client/src/: lib.rs  start.rs
server/landtish/: README.md  build.rs
server/landtish/client/: Cargo.toml
server/landtish/client/src/: description.rs  lib.rs
server/landtish/server/: Cargo.toml  build.rs
server/landtish/server/src/: main.rs
server/landtish/shared/: Cargo.toml
server/landtish/shared/src/: lib.rs
server/landtish/state/: Cargo.toml
server/landtish/state/src/: error.rs  event.rs  lib.rs  state.rs
server/landtish/state/tests/: landtish-state.rs
server/model/: Cargo.toml
server/server/: Cargo.toml
server/server/src/: main.rs
shared/account-api/: Cargo.toml
shared/api-account/: Cargo.toml
shared/api-account/src/: lib.rs
solar-system/: README.md
solar-system/api/: Cargo.toml
solar-system/client/: Cargo.toml
solar-system/client/src/: lib.rs
solar-system/model/: Cargo.toml
solar-system/server/: Cargo.toml
