[package]
name = "public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
bounce = {version="0.3", features = ["helmet"]}
stylist = {version = "0.10", features = ["yew_integration"] }
js-sys="0.3"
weblog = "0.3.0"
js-function-promisify = "0.2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "DocumentFragment",
    "Window"
]