[package]
name = "account-client-component"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
yew = "0.18"
custom-elements = "0.2"
wasm-bindgen = "0.2"
weblog = "0.3.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "DocumentFragment"
]

