[package]
name = "account-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
account-api = { path = "../api" }
bounce = "0.3"
custom-elements = "0.2"
gloo-storage = "0.2"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
weblog = "0.3.0"
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "DocumentFragment"
]

