[package]
name = "account-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-model = { path = "../../lib/event-model" }
account-api = { path = "../api" }
anyhow= "1.0"
chrono= "0.4"
derive_more= "0.99"
eventstore = "2.1"
jsonwebtokens = "1.1"
urlencoding = "2.1"
uuid = {version = "0.8", features = ["v4", "serde"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae070"  }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls","mysql", "migrate" ] }


[dev-dependencies]
tokio = "1.21"
async-trait = "0.1"
cucumber = { version = "0.15" }

[[test]]
name = "account-model" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
