[package]
name = "web-home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-account = { path = "../../shared/api-account" }
bounce = "0.3"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
stylist = {version = "0.10", features = ["yew_integration"] }
weblog = "0.3.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.19.3"


[dependencies.web-sys]
version="0.3"
features=[
    "InputEvent",
]