[package]
name = "game-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
game-api = { path = "../api" }
custom-elements = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
weblog = "0.3.0"
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
    "Attr",
    "DocumentFragment",
    "Element",
    "NamedNodeMap",
    "Window",
]