[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-account = { path = "../../shared/api-account" }
eventstore = "2.1.1"
jsonwebtokens = "1.1"
urlencoding = "2.1.0"
uuid = {version = "0.8", features = ["v4", "serde"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = "0.11.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls","mysql", "migrate" ] }
