[package]
name = "server-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
global-config = { path = "../../lib/global-config" }
eventstore = "2.1"
server-api = { path = "../api" }
server-model = { path = "../model" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae070"  }
